--- a/pages/tallas.html
+++ b/pages/tallas.html
@@ -12,7 +12,7 @@
     <title>APAPACHO | Tallas</title>
 </head>
 <body>
-    <header>
+    <header class="shadow-bottom">
         <div class="row justify-content-md-center">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
@@ -39,19 +39,7 @@
                                 <a href="./../index.html" class="nav-link" aria-current="page">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./tienda.html" class="nav-link">Tienda</a>
-                            </li>
-                            <li class="nav-item">
                                 <a href="./tallas.html" class="nav-link active">Tallas</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="./quienes-somos.html" class="nav-link">¿Quienes Somos?</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="./encuentranos.html" class="nav-link">Encuéntranos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a href="./contacto.html" class="nav-link">Contacto</a>
                             </li>
                         </ul>
                     </div>
@@ -59,9 +47,9 @@
             </nav>
         </div>
     </header>   
-    <main class="paginas">
-        <div class="main-section">
-            <section>
+    <main class="container paginas">
+        <div class="row">
+            <section class="col-12">
                 <article>
                     <h2>Tallas</h2>
                     <div class="texto_pagina">
