--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <section id="productos_destacados" class="col-12">
                 <div>
                     <h2 class="text-center">Productos Destacados</h2>
-                    <div class="row">
+                    <div class="row justify-content-center">
                         <div id="producto_1" class="card mb-3 producto animate__animated animate__flipinX">
                             <div class="producto_imagen">
                                 <img src="./assets/img/ModeloAmapola.jpg" class="card-img-top" alt="Modelo Amapola">
