preparandome para reemplazar main

--- a/index.html
+++ b/index.html
@@ -91,9 +91,14 @@
                             <h2 class="tela-margen text-center">Buscanos en nuestros puntos de venta</h2>
                             <span class="tela-margen"><a href="./pages/encuentranos.html" class="boton">Encuentranos <i class="fa-solid fa-store"></i></a></span>
                         </div>
-                    </div>                
-                </div>                  
-                
+                    </div>     
+                    <div class="carousel-item slide-div" id="slide3">
+                        <div class="tela text-align">
+                            <h2 class="tela-margen text-center">Conoce quienes somos</h2>
+                            <span class="tela-margen"><a href="./pages/quienes-somos.html" class="boton">Conocenos <i class="fa-solid fa-store"></i></a></span>
+                        </div>
+                    </div>            
+                </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                   <span class="visually-hidden">Previous</span>
