--- a/index.html
+++ b/index.html
@@ -54,18 +54,6 @@
                                 <li class="nav-item">
                                     <a href="./pages/contacto.html" class="nav-link">Contacto</a>
                                 </li>
-                                <!--
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                            Dropdown link
-                                        </a>
-                                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                            <li><a class="dropdown-item" href="#">Action</a></li>
-                                            <li><a class="dropdown-item" href="#">Another action</a></li>
-                                            <li><a class="dropdown-item" href="#">Something else here</a></li>
-                                        </ul>
-                                    </li>
-                                -->
                             </ul>
                         </div>
                     </div>
@@ -108,8 +96,8 @@
                   <span class="visually-hidden">Next</span>
                 </button>
             </section>
-            <section id="productos_destacados" class="col-12">
-                <div>
+            <section class="col-12">
+                <div id="productos_destacados">
                     <h2 class="text-center">Productos Destacados</h2>
                     <div class="row justify-content-center">
                         <div id="producto_1" class="card mb-3 producto animate__animated animate__flipinX">
