--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -17,7 +17,7 @@
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
-                    <img class="img-thumbnail" src="./../assets/img/logo.jpg" alt="Logo Apapacho">
+                    <img class="img-thumbnail" src="./assets/img/logo.jpg" alt="Logo Apapacho">
                 </div>
                 <div class="logo-header">
                     <h1>APAPACHO</h1>
@@ -30,35 +30,35 @@
             <!-- Menú principal --> 
             <nav class="principal-nav navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fa-solid menu_cel"></i>
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                         <ul class="navbar-nav justify-content-center">
                             <li class="nav-item">
-                                <a href="./../index.html" class="nav-link" aria-current="page">Inicio</a>
+                                <a href="./index.html" class="nav-link active" aria-current="page">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./tienda.html" class="nav-link">Tienda</a>
+                                <a href="./pages/tienda.html" class="nav-link">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./tallas.html" class="nav-link">Tallas</a>
+                                <a href="./pages/tallas.html" class="nav-link">Tallas</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./quienes-somos.html" class="nav-link active">¿Quienes Somos?</a>
+                                <a href="./pages/quienes-somos.html" class="nav-link">¿Quienes Somos?</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./encuentranos.html" class="nav-link">Encuéntranos</a>
+                                <a href="./pages/encuentranos.html" class="nav-link">Encuéntranos</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./contacto.html" class="nav-link">Contacto</a>
+                                <a href="./pages/contacto.html" class="nav-link">Contacto</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
-    </header>    
+    </header>     
     <main class="container paginas">
         <div class="row">
             <section class="col-12">
