--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -31,13 +31,13 @@
             <!-- Menú principal --> 
             <nav class="principal-nav navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
+                    <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fa-solid menu_cel"></i>
                     </button>
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                         <ul class="navbar-nav justify-content-center">
                             <li class="nav-item">
-                                <a href="./../index.html" class="nav-link" aria-current="page">Inicio</a>
+                                <a href="./../index.html" class="nav-link">Inicio</a>
                             </li>
                             <li class="nav-item">
                                 <a href="./tienda.html" class="nav-link">Tienda</a>
@@ -52,7 +52,7 @@
                                 <a href="./encuentranos.html" class="nav-link">Encuéntranos</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./contacto.html" class="nav-link active">Contacto</a>
+                                <a href="./contacto.html" class="nav-link active" aria-current="page">Contacto</a>
                             </li>
                         </ul>
                     </div>
