--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -17,7 +17,7 @@
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
-                    <img class="img-thumbnail" src="./assets/img/logo.jpg" alt="Logo Apapacho">
+                    <img class="img-thumbnail" src="./../assets/img/logo.jpg" alt="Logo Apapacho">
                 </div>
                 <div class="logo-header">
                     <h1>APAPACHO</h1>
@@ -36,29 +36,29 @@
                     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
                         <ul class="navbar-nav justify-content-center">
                             <li class="nav-item">
-                                <a href="./index.html" class="nav-link active" aria-current="page">Inicio</a>
+                                <a href="./../index.html" class="nav-link">Inicio</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./pages/tienda.html" class="nav-link">Tienda</a>
+                                <a href="./tienda.html" class="nav-link">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./pages/tallas.html" class="nav-link">Tallas</a>
+                                <a href="./tallas.html" class="nav-link">Tallas</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./pages/quienes-somos.html" class="nav-link">¿Quienes Somos?</a>
+                                <a href="./quienes-somos.html" class="nav-link active" aria-current="page">¿Quienes Somos?</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./pages/encuentranos.html" class="nav-link">Encuéntranos</a>
+                                <a href="./encuentranos.html" class="nav-link">Encuéntranos</a>
                             </li>
                             <li class="nav-item">
-                                <a href="./pages/contacto.html" class="nav-link">Contacto</a>
+                                <a href="./contacto.html" class="nav-link">Contacto</a>
                             </li>
                         </ul>
                     </div>
                 </div>
             </nav>
         </div>
-    </header>     
+    </header>    
     <main class="container paginas">
         <div class="row">
             <section class="col-12">
