--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>APAPACHO | Diseño Infantil</title>
 </head>
 <body>
-    <div class="container-fluid homeGrid">    
+    <div class="container-fluid homeGrid p-0">    
         <header class="shadow-bottom">
-            <div class="row justify-content-md-center">
+            <div class="row justify-content-md-center bs_gutter-x-0">
                 <!-- Titulo principal -->
                 <div class="logo animate__animated animate__zoomIn">
                     <div class="logo-img">
@@ -27,7 +27,7 @@
                 </div>
                 <span class="descripcion"><em>"Vestuario hecho a mano para apapachar a quienes amas" </em>&#128157</span>                               
             </div>
-            <div class="row justify-content-md-center menu-fixed">
+            <div class="row justify-content-md-center menu-fixed bs_gutter-x-0">
                 <!-- Menú principal --> 
                 <nav class="principal-nav navbar navbar-expand-lg navbar-light">
                     <div class="container-fluid">
@@ -70,20 +70,20 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active slide-div" id="slide1">
                         <div class="tela text-align text-center">
-                            <h2 class="tela-margen">Vestuario hecho a mano para apapachar a quienes amas</h2>
-                            <span class="tela-margen"><a href="./pages/tienda.html" class="boton">Visita nuestra tienda <i class="fa-solid fa-store"></i></a></span>
+                            <h2 class="p-3">Vestuario hecho a mano para apapachar a quienes amas</h2>
+                            <span class="p-3"><a href="./pages/tienda.html" class="boton p-3">Visita nuestra tienda <i class="fa-solid fa-store"></i></a></span>
                         </div>
                     </div>    
                     <div class="carousel-item slide-div" id="slide2">
                         <div class="tela text-align">
-                            <h2 class="tela-margen text-center">Buscanos en nuestros puntos de venta</h2>
-                            <span class="tela-margen"><a href="./pages/encuentranos.html" class="boton">Encuentranos <i class="fa-solid fa-store"></i></a></span>
+                            <h2 class="p-3 text-center">Buscanos en nuestros puntos de venta</h2>
+                            <span class="p-3"><a href="./pages/encuentranos.html" class="boton p-3">Encuentranos <i class="fa-solid fa-store"></i></a></span>
                         </div>
                     </div>     
                     <div class="carousel-item slide-div" id="slide3">
                         <div class="tela text-align">
-                            <h2 class="tela-margen text-center">Conoce quienes somos</h2>
-                            <span class="tela-margen"><a href="./pages/quienes-somos.html" class="boton">Conocenos <i class="fa-solid fa-store"></i></a></span>
+                            <h2 class="p-3 text-center">Conoce quienes somos</h2>
+                            <span class="p-3"><a href="./pages/quienes-somos.html" class="boton p-3">Conocenos <i class="fa-solid fa-store"></i></a></span>
                         </div>
                     </div>            
                 </div>
@@ -97,7 +97,7 @@
                 </button>
             </section>
             <section class="col-12">
-                <div id="productos_destacados">
+                <div class="pad-2">
                     <h2 class="text-center">Productos Destacados</h2>
                     <div class="row justify-content-center">
                         <div id="producto_1" class="card mb-3 producto animate__animated animate__flipinX">
@@ -193,13 +193,13 @@
                     </div>
                 </div>
             </section>
-            <section id="instagram" class="col-12">
+            <section class="instagram col-12">
                 <div class="tela">
                     <div class="row">
-                        <div id="instagram_info" class="card">
+                        <div class="instagram_info card">
                             <h2>Instagram</h2>
-                            <span class="tela-margen">
-                                <a href="https://www.instagram.com/apapachoval/" target="_blank" class="boton"><i class="fa-brands fa-instagram"></i> apapachoval</a>
+                            <span class="p-3">
+                                <a href="https://www.instagram.com/apapachoval/" target="_blank" class="boton p-3"><i class="fa-brands fa-instagram"></i> apapachoval</a>
                             </span>
                         </div>
                         <div class="card instagram_img">
@@ -229,7 +229,7 @@
         </main>      
         <footer>
             <div class="container">
-                <div class="row">
+                <div class="row bs_gutter-x-0">
                     <div class="col footer_logo text-center">
                         <img src="./assets/img/Logo_blanco.png" alt="">
                     </div>
