--- a/pages/tallas.html
+++ b/pages/tallas.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="shadow-bottom">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center bs_gutter-x-0">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
@@ -26,7 +26,7 @@
             </div>
             <span class="descripcion"><em>"Vestuario hecho a mano para apapachar a quienes amas" </em>&#128157</span>                               
         </div>
-        <div class="row justify-content-md-center menu-fixed">
+        <div class="row justify-content-md-center menu-fixed bs_gutter-x-0">
             <!-- Menú principal --> 
             <nav class="principal-nav navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
@@ -59,12 +59,12 @@
             </nav>
         </div>
     </header>  
-    <main class="container paginas">
-        <div class="row">
+    <main class="container paginas pad-2">
+        <div class="row bs_gutter-x-0">
             <section class="col-12">
                 <article>
                     <h2>Tallas</h2>
-                    <div class="texto_pagina">
+                    <div class="pad-bottom-2">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum congue eleifend purus, vel sollicitudin ligula tempus vitae. Nam eleifend purus ac nulla pulvinar mattis. Ut posuere, augue sed malesuada auctor, ipsum purus volutpat odio, vehicula venenatis nisi magna non est. Sed in dolor feugiat, eleifend dui sed, tempus turpis. Integer eu nulla commodo, imperdiet tortor sit amet, interdum lectus. Etiam at ultricies justo, et condimentum arcu. Suspendisse eleifend nulla tellus, at placerat augue tincidunt nec. Donec nunc mi, porttitor sit amet aliquet ac, consequat malesuada sem. Donec lacus tortor, cursus sed faucibus non, porttitor id arcu. Pellentesque quis tortor non eros bibendum porttitor.
                     </div>
                     <div id="talla_cat_1" class="tabla_cat animate__animated animate__flipInX text-center">
@@ -177,7 +177,7 @@
     </main> 
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row bs_gutter-x-0">
                 <div class="col footer_logo text-center">
                     <img src="./../assets/img/Logo_blanco.png" alt="">
                 </div>
