--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="shadow-bottom">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center bs_gutter-x-0">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
@@ -26,7 +26,7 @@
             </div>
             <span class="descripcion"><em>"Vestuario hecho a mano para apapachar a quienes amas" </em>&#128157</span>                               
         </div>
-        <div class="row justify-content-md-center menu-fixed">
+        <div class="row justify-content-md-center menu-fixed bs_gutter-x-0">
             <!-- Menú principal --> 
             <nav class="principal-nav navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
@@ -59,8 +59,8 @@
             </nav>
         </div>
     </header>   
-    <main class="container paginas">
-        <div class="row">
+    <main class="container paginas pad-2">
+        <div class="row bs_gutter-x-0">
             <section class="col-md-9">
                 <h2>Tienda</h2>
                 <div class="productos">
@@ -215,7 +215,7 @@
     </main>
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row bs_gutter-x-0">
                 <div class="col footer_logo text-center">
                     <img src="./../assets/img/Logo_blanco.png" alt="">
                 </div>
