--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <header class="shadow-bottom">
-        <div class="row justify-content-md-center">
+        <div class="row justify-content-md-center bs_gutter-x-0">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
                 <div class="logo-img">
@@ -26,7 +26,7 @@
             </div>
             <span class="descripcion"><em>"Vestuario hecho a mano para apapachar a quienes amas" </em>&#128157</span>                               
         </div>
-        <div class="row justify-content-md-center menu-fixed">
+        <div class="row justify-content-md-center menu-fixed bs_gutter-x-0">
             <!-- Menú principal --> 
             <nav class="principal-nav navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
@@ -59,12 +59,12 @@
             </nav>
         </div>
     </header> 
-    <main class="container paginas">
-        <div class="row">
+    <main class="container paginas pad-2">
+        <div class="row bs_gutter-x-0">
             <section class="col-12">
                 <article id="encuentranos">
                     <h2>Encuéntranos</h2>
-                    <div class="texto_pagina">
+                    <div class="pad-bottom-2">
                         <p>
                             Etiam a neque nec nibh pulvinar ornare. Vestibulum ut tristique lectus. Aliquam sit amet lectus accumsan, semper tortor at, lobortis tellus. Maecenas luctus augue nulla, non fermentum mauris ultrices sit amet. Quisque commodo sollicitudin dictum. Donec rhoncus consectetur neque, nec efficitur orci tristique in. Morbi non lacus vel elit ultricies tincidunt sed sed purus. Pellentesque id risus quis eros commodo tristique. Aliquam eget lacus faucibus, efficitur leo ac, iaculis lacus.
                         </p>
@@ -137,7 +137,7 @@
     </main> 
     <footer>
         <div class="container">
-            <div class="row">
+            <div class="row bs_gutter-x-0">
                 <div class="col footer_logo text-center">
                     <img src="./../assets/img/Logo_blanco.png" alt="">
                 </div>
