--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -12,7 +12,7 @@
     <title>APAPACHO | Quienes Somos</title>
 </head>
 <body>
-    <header class="shadow-bottom">
+    <header class="shadow-bottom text-center">
         <div class="row justify-content-md-center bs_gutter-x-0">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
