--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -12,7 +12,7 @@
     <title>APAPACHO | Tienda</title>
 </head>
 <body>
-    <header class="shadow-bottom">
+    <header class="shadow-bottom text-center">
         <div class="row justify-content-md-center bs_gutter-x-0">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
@@ -59,8 +59,8 @@
             </nav>
         </div>
     </header>   
-    <main class="container paginas pad-2">
-        <div class="row bs_gutter-x-0">
+    <main class="container paginas pad-2 tienda">
+        <div class="row bs_gutter-x-0 justify-content-center">
             <section class="col-md-9">
                 <h2>Tienda</h2>
                 <div class="productos">
@@ -159,8 +159,11 @@
                 </div>
             </section>
             <aside id="filtroProductos" class="col-md-3">
-                <h2>Filtro Productos</h2>
-                <article class="aside-flex">
+                <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#filtros" aria-expanded="false">
+                    <i class="fa-solid fa-filter"></i>
+                </button>
+                <article id="filtros" class="aside-flex collapse">
+                    <h2>Filtro Productos</h2>
                     <div>
                         <h3>Color</h3>
                         <ul>
