--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="container-fluid homeGrid p-0">    
-        <header class="shadow-bottom">
+        <header class="shadow-bottom text-center">
             <div class="row justify-content-md-center bs_gutter-x-0">
                 <!-- Titulo principal -->
                 <div class="logo animate__animated animate__zoomIn">
