--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -13,7 +13,7 @@
     <title>APAPACHO | Contacto</title>
 </head>
 <body>
-    <header class="shadow-bottom">
+    <header class="shadow-bottom text-center">
         <div class="row justify-content-md-center bs_gutter-x-0">
             <!-- Titulo principal -->
             <div class="logo animate__animated animate__zoomIn">
