--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -9,7 +9,9 @@
     <link href="./../assets/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link rel="stylesheet" href="./../assets/css/style.css">
-    <title>APAPACHO | Encuentranos</title>
+    <title>Encuentranos | APAPACHO</title>
+    <meta name="description" content="Tienda de vestuario infantil hecho a mano para apapachar a quienes amas. Produciendo desde el Sur de Chile a baja escala, amando la naturaleza.">
+    <meta name="keywords" content="Apapacho,Valdivia,Diseño,Independiente,Tienda,Ropa,Infantil,Niños,Niñas,Niñes,Niño,Niña,Niñe">
 </head>
 <body>
     <header class="shadow-bottom text-center">
