--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <title>APAPACHO | Diseño Infantil</title>
     <meta name="description" content="Tienda de vestuario infantil hecho a mano para apapachar a quienes amas. Produciendo desde el Sur de Chile a baja escala, amando la naturaleza.">
     <meta name="keywords" content="Apapacho,Valdivia,Diseño,Independiente,Tienda,Ropa,Infantil,Niños,Niñas,Niñes,Niño,Niña,Niñe">
-
 </head>
 <body>
     <div class="container-fluid homeGrid p-0">    
@@ -64,6 +63,8 @@
             </div>
         </header>     
         <main class="row">
+            <!-- Slider bootstrap de 3 slides-->
+            <!-- El codigo de cada slide está dentro del div con id="slideX" donde X es el número del slide -->
             <section id="carouselExampleIndicators" class="col-12 carousel slide slider_apa" data-bs-ride="carousel">                
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -99,6 +100,7 @@
                   <span class="visually-hidden">Next</span>
                 </button>
             </section>
+            <!-- Productos Destacados -->
             <section class="col-12">
                 <div class="pad-2">
                     <h2 class="text-center">Productos Destacados</h2>
@@ -196,6 +198,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Sección Instagram -->
             <section class="instagram col-12">
                 <div class="tela">
                     <div class="row">
@@ -231,6 +234,7 @@
             </section>
         </main>      
         <footer>
+            <!-- Sección Footer don 3 columnas-->
             <div class="container">
                 <div class="row bs_gutter-x-0">
                     <div class="col footer_logo text-center">
@@ -257,6 +261,7 @@
                     </div>
                 </div>
             </div>
+            <!-- Atribución -->
             <div class="row justify-content-md-center atribucion">
                 © Copyright 2022 Apapacho | Walter Pineda Ilabaca
             </div>
