--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -64,6 +64,7 @@
     </header>    
     <main class="container paginas pad-2">
         <div class="row bs_gutter-x-0">
+            <!-- Pagina: Contacto -->
             <section class="col-md-9 pad-right-1p5">
                 <h2>Contacto</h2>
                 <article>                    
@@ -94,6 +95,7 @@
                     </form>
                 </article>
             </section>
+            <!-- Barra Lateral -->
             <aside class="col-md-3">
                 <div id="informacionContacto">
                     <h3>Información de Contacto</h3>
