--- a/pages/tienda.html
+++ b/pages/tienda.html
@@ -63,6 +63,7 @@
     </header>   
     <main class="container paginas pad-2 tienda">
         <div class="row bs_gutter-x-0 justify-content-center">
+            <!-- Pagina: Tienda -->
             <section class="col-md-9">
                 <h2>Tienda</h2>
                 <div class="productos">
@@ -160,6 +161,7 @@
                     </div>
                 </div>
             </section>
+            <!-- Barra Lateral -->
             <aside id="filtroProductos" class="col-md-3">
                 <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#filtros" aria-expanded="false">
                     <i class="fa-solid fa-filter"></i>
@@ -219,6 +221,7 @@
         </div> 
     </main>
     <footer>
+        <!-- Sección Footer don 3 columnas-->
         <div class="container">
             <div class="row bs_gutter-x-0">
                 <div class="col footer_logo text-center">
@@ -245,6 +248,7 @@
                 </div>
             </div>
         </div>
+        <!-- Atribución -->
         <div class="row justify-content-md-center atribucion">
             © Copyright 2022 Apapacho | Walter Pineda Ilabaca
         </div>
