--- a/pages/encuentranos.html
+++ b/pages/encuentranos.html
@@ -62,6 +62,7 @@
         </div>
     </header> 
     <main class="container paginas pad-2">
+        <!-- Pagina Full Width: Encuentranos -->
         <div class="row bs_gutter-x-0">
             <section class="col-12">
                 <article id="encuentranos">
@@ -138,6 +139,7 @@
         </div>        
     </main> 
     <footer>
+        <!-- Sección Footer don 3 columnas-->
         <div class="container">
             <div class="row bs_gutter-x-0">
                 <div class="col footer_logo text-center">
@@ -164,6 +166,7 @@
                 </div>
             </div>
         </div>
+        <!-- Atribución -->
         <div class="row justify-content-md-center atribucion">
             © Copyright 2022 Apapacho | Walter Pineda Ilabaca
         </div>
