--- a/pages/tallas.html
+++ b/pages/tallas.html
@@ -62,6 +62,7 @@
         </div>
     </header>  
     <main class="container paginas pad-2">
+        <!-- Pagina Full Width: Tallas -->
         <div class="row bs_gutter-x-0">
             <section class="col-12">
                 <article>
@@ -178,6 +179,7 @@
         </div>        
     </main> 
     <footer>
+        <!-- Sección Footer don 3 columnas-->
         <div class="container">
             <div class="row bs_gutter-x-0">
                 <div class="col footer_logo text-center">
@@ -204,6 +206,7 @@
                 </div>
             </div>
         </div>
+        <!-- Atribución -->
         <div class="row justify-content-md-center atribucion">
             © Copyright 2022 Apapacho | Walter Pineda Ilabaca
         </div>
